# MultiModal

./: README.md
MultiModalSearch/: .gitignore  README.md  download_youtube_video.py  main.py  multimodal_video_rag.ipynb  pyproject.toml
MultiModalSearch/video_processing_output/transcripts/: Astronauts on the Space Station Celebrate the 2026 FIFA World Cup_transcript.json  Astronauts on the Space Station Celebrate the 2026 FIFA World Cup_transcript.txt  International Space Station: Humanity Lab in Space (Narrated by Adam Savage)_transcript.json  International Space Station: Humanity Lab in Space (Narrated by Adam Savage)_transcript.txt
VideoSegmentation/: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  video_qa_system.ipynb
VideoSegmentation/.bob/rules-advanced/: AGENTS.md
VideoSegmentation/.bob/rules-ask/: AGENTS.md
VideoSegmentation/.bob/rules-code/: AGENTS.md
VideoSegmentation/.bob/rules-plan/: AGENTS.md
