[project]
name = "video-segmentation"
version = "0.1.0"
description = "Video Q&A system using Google Gemini Pro Vision, multi2vector embeddings, and ChromaDB"
requires-python = ">=3.12"
dependencies = [
    "google-generativeai>=0.8.0",
    "chromadb>=0.5.0",
    "opencv-python>=4.10.0",
    "pillow>=10.4.0",
    "numpy>=1.26.0",
    "jupyter>=1.1.0",
    "ipykernel>=6.29.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []